# moodlepy

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pre-commit.yaml  pytest.yml  python-publish.yml
docs/: index.html
moodle/: __init__.py  __main__.py  attr.py  config.py  exception.py  mdl.py  moodle.py
moodle/auth/: __init__.py  auth.py
moodle/auth/email/: __init__.py  base.py  signup_setting.py  signup_user_response.py  user_custom_field.py
moodle/base/: base_moodle.py  moodle_object.py  name_value.py  responses.py  warning.py
moodle/base/general/: __init__.py  id_name.py  key_message.py  key_value.py  name_value.py  result_error.py  status.py  success.py  type_value.py  validated.py
moodle/base/preference/: __init__.py  notification_component.py  notification_info.py  notification_processor.py  preference_component.py  preference_processor.py  preference_user.py
moodle/block/: __init__.py  block.py  recently_accessed_item.py  starred_course.py
moodle/core/: __init__.py  core.py
moodle/core/auth/: __init__.py  base.py  request_password_reset_response.py
moodle/core/backup/: __init__.py  backup_completion_status.py  base.py  copy_data.py  table_row_data.py
moodle/core/badges/: __init__.py  badge.py  base.py
moodle/core/block/: __init__.py  base.py  block.py
moodle/core/blog/: __init__.py  base.py  blog.py  blog_entry.py  view_entry.py
moodle/core/calendar/: __init__.py  access_information.py  allowed_event_types.py  base.py  calendar_export_token.py  course_event.py  date_view.py  day_view.py  event.py  monthly_view.py  period.py  timestamp.py
moodle/core/cohort/: __init__.py  add_member.py  base.py  category_type.py  cohort.py  cohort_members.py  cohort_type.py  create_cohort.py  delete_cohort.py  update_cohort.py  user_type.py
moodle/core/comment/: __init__.py  base.py  comment.py
moodle/core/competency/: __init__.py  base.py
moodle/core/completion/: __init__.py  activity_completion_status.py  base.py  course_completion_status.py  status_completed.py
moodle/core/course/: __init__.py  activity_overview.py  base.py  category.py  check_updates.py  content.py  content_option.py  course.py  course_capability.py  course_category.py  course_module.py  navigation_option.py  to_check.py  user_favourite.py  view.py
moodle/core/customfield/: __init__.py  base.py  reload_template.py
moodle/core/enrol/: __init__.py  base.py  capability_enrolled_user.py  edit_user_enrolment.py  enrolled_user.py  enrolment_method.py
moodle/core/files/: base.py  filepath_filename.py  parent_paths.py
moodle/core/grades/: __init__.py  base.py  grade.py
moodle/core/message/: __init__.py  base.py  contact_request.py
moodle/core/notes/: __init__.py  base.py  course_note.py  course_notes.py  note.py  personal_note.py  site_note.py  view_notes.py
moodle/core/user/: __init__.py  agree_site_policy_response.py  base.py  create_user.py  criteria.py  enrolled_course.py  get_users_response.py  user.py  user_custom_field.py  user_group.py  user_list.py  user_preference.py  user_profile.py  user_role.py
moodle/core/webservice/: __init__.py  advanced_feature.py  base.py  function.py  info.py
moodle/enrol/: __init__.py  enrol.py
moodle/enrol/guest/: __init__.py  base.py  instance_info.py
moodle/enrol/manual/: __init__.py  base.py  enrolment.py
moodle/enrol/self/: __init__.py  base.py  enrol_user_response.py  instance_info.py
moodle/gradereport/: __init__.py  gradereport.py
moodle/mod/: __init__.py  mod.py
moodle/tool/: __init__.py  tool.py
moodle/utils/: decorator.py  helper.py  typing.py
moodlepy/: __init__.py  moodle.py
moodlepy/base/: base_moodle.py  moodle_object.py  name_value.py  warning.py
moodlepy/core/: core.py
moodlepy/mod/: mod.py
moodlepy/tool/: tool.py
moodlepy/utils/: decorator.py
tests/: conftest.py  test_moodle.py  test_moodlepy.py
tests/test_core/: conftest.py  test_badges.py  test_block.py  test_blog.py  test_calendar.py  test_course.py  test_grades.py  test_notes.py  test_webservice.py
tests/test_tool/: test_mobile.py
(+76 files in other folders)
