[tool.poetry]
name = "moodlepy"
version = "0.22.2"
description = "Python wrapper for moodle web service."
authors = ["hexatester <habibrohman@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hexatester.github.io/moodlepy/"
repository = "https://github.com/hexatester/moodlepy"
packages = [
    { include = "moodle" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Topic :: Education',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = [
    "LICENSE",
    "README.md",
]

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.24.0"
attrs = "^20.3.0"
ujson = {version = "^4.0.2", optional = true}

[tool.poetry.extras]
ujson = ["ujson"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"
flake8 = "^3.8.3"
mypy = "^0.782"
pre-commit = "^2.7.1"
rope = "^0.17.0"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
moodle = "moodle.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
