[tool.poetry]
name = "moodlepy"
version = "0.24.0"
description = "Python wrapper for moodle web service."
authors = ["hexatester <habibrohman@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hexatester.github.io/moodlepy/"
repository = "https://github.com/hexatester/moodlepy"
packages = [
    { include = "moodle" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Topic :: Education',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
include = [
    "LICENSE",
    "README.md",
]

[tool.poetry.dependencies]
python = "^3.8.10"
attrs = "^22.2.0"
ujson = {version = "^5.4.0", optional = true}
requests = "^2.28.2"
cattrs = "^22.2.0"

[tool.poetry.extras]
ujson = ["ujson"]

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
flake8 = "4.0.1"
mypy = "^1.5.1"
pre-commit = "2.20.0"
rope = "^1.7.0"
pytest-cov = "3.0.0"
black = "^23.7.0"
types-attrs = "^19.1.0"
types-requests = "^2.28.10"
types-ujson = "^5.4.0"

[tool.poetry.scripts]
moodle = "moodle.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
